# exgcoup

./: .cproject  .project  AUTHORS  COPYING  LICENSE  Makefile.am  NEWS  README  README.md  VERSION  autogen.sh  configure  configure.ac
doc/: spec_config.jp.txt
helper/: exrdy  start
include/: egc_sys.h  egclib.h  libcfr.h  pmg_sys.h  procmng.h  utilaspect.h  utilmacros.h
sample/: Makefile  Makefile.am  ca.sh  cb.sh  clientA.c  clientB.c  clientMultiA.c  clientMultiB.c  config  config.fx
src/: ASP_debug.c  CFR_base.c  EGC_comm.c  EGC_comm_file.c  EGC_comm_sock.c  EGC_event.c  EGC_lib.c  EGC_server.c  EGC_utils.c  Makefile  Makefile.am  PMG_base.c
src/aspdebug/: ASP_debug.c
src/communication/: EGC_comm_sock.c
src/config_reader/: Makefile  libcfr.h
src/core/: EGC_event.c  EGC_lib.c  EGC_server.c  EGC_utils.c
src/procmng/: Makefile  PMG_base.c  procmng.h
unittest/libev/: test.c
unittest/ssh/: Makefile  ssh.c
